[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
description = "Development-related Tasks"
publish = false

[dependencies]
khonsu-tools = { git = "https://github.com/khonsulabs/khonsu-tools.git", branch = "main" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
dirs = "4"
