[package]
name = "book-examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bonsaidb = { path = "../../crates/bonsaidb", version = "0.2.0", features = [
    "local",
] }
num-derive = "0.3"
num-traits = "0.2"
