[package]
name = "bonsaidb-client"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "Client for accessing BonsaiDb servers."
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations"]
readme = "../../README.md"

[features]
default = ["full"]
full = ["websockets", "trusted-dns", "password-hashing"]
websockets = ["bonsaidb-core/websockets", "tokio-tungstenite", "bincode"]
trusted-dns = ["fabruic/trust-dns"]
test-util = []
tracing = ["pot/tracing"]
password-hashing = ["bonsaidb-core/password-hashing"]

[dependencies]
bonsaidb-core = { path = "../bonsaidb-core", version = "0.1.0", default-features = false, features = [
    "networking",
] }
bonsaidb-utils = { path = "../bonsaidb-utils", version = "0.1.0" }
thiserror = "1"
url = "2.2"
flume = "0.10"
futures = "0.3"
async-trait = "0.1"
once_cell = "1"
serde = "1"
pot = "1.0.0"
bincode = { version = "1", optional = true }
async-lock = "2"
js-sys = "0.3"
log = "0.4"
derive-where = "=1.0.0-rc.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "CloseEvent",
] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fabruic = { version = "0.0.1-dev.5" }
tokio = { version = "1", features = ["sync"] }
tokio-tungstenite = { version = "0.16", optional = true, features = [
    "rustls-tls-native-roots",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["sync", "macros"] }

[package.metadata.docs.rs]
all-features = true
