[package]
name = "bonsaidb-client"
version = "0.4.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "Client for accessing BonsaiDb servers."
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations"]
readme = "./README.md"
homepage = "https://bonsaidb.io/"
rust-version = "1.65"

[features]
default = ["full"]
full = ["websockets", "trusted-dns", "token-authentication", "password-hashing"]
websockets = ["bonsaidb-core/websockets", "tokio-tungstenite", "bincode"]
trusted-dns = ["fabruic/trust-dns"]
test-util = []
tracing = ["pot/tracing"]
password-hashing = ["bonsaidb-core/password-hashing"]
token-authentication = ["bonsaidb-core/token-authentication"]
included-from-omnibus = []

[dependencies]
bonsaidb-core = { path = "../bonsaidb-core", version = "=0.4.0", default-features = false, features = [
    "included-from-client",
] }
bonsaidb-utils = { path = "../bonsaidb-utils", version = "=0.4.0" }
thiserror = "1"
url = "2.2"
flume = "0.10"
futures = "0.3"
async-trait = "0.1"
once_cell = "1"
serde = "1"
pot = "2.0.0"
bincode = { version = "1", optional = true }
async-lock = "2"
js-sys = "0.3"
log = "0.4"
derive-where = "~1.2.0"
parking_lot = "0.12.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "CloseEvent",
] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fabruic = { version = "0.0.1-dev.6" }
tokio = { version = "1.16.1", features = ["sync", "macros"] }
tokio-tungstenite = { version = "0.18", optional = true, features = [
    "rustls-tls-native-roots",
] }

[dev-dependencies]
anyhow = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.16.1", features = ["sync", "macros"] }

[package.metadata.docs.rs]
features = ["full"]
