[package]
name = "bonsaidb-core"
version = "0.1.0-dev.4"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "Core functionality and types for BonsaiDb."
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations"]
readme = "../../README.md"
homepage = "https://dev.bonsaidb.io/"

[features]
default = []
test-util = ["tokio", "anyhow"]
networking = ["multiuser"]
websockets = []
actionable-traits = []
instrument = ["pot/tracing"]
multiuser = ["zeroize"]
encryption = []
password-hashing = ["multiuser"]

[dependencies]
bonsaidb-macros = { path = "../bonsaidb-macros", version = "0.1.0-dev.4" }
circulate = { version = "0.2.1" }
serde = { version = "1", features = ["derive"] }
pot = "1.0.0-rc.4"
async-trait = "0.1"
uuid = { version = "0.8", features = ["v4", "serde"], optional = true }
thiserror = "1"
sha2 = "0.10"
futures = { version = "0.3" }
tokio = { version = "1", features = ["time"], optional = true }
num-traits = "0.2"
actionable = "0.1"
anyhow = { version = "1", optional = true }
itertools = "0.10"
ordered-varint = "0.1.0-dev.1"
derive-where = "=1.0.0-rc.2"
transmog = "0.1.0-dev.2"
transmog-pot = "0.1.0-dev.2"
arc-bytes = { version = "0.3.1", features = ["serde"] }
zeroize = { version = "1", optional = true, features = ["zeroize_derive"] }

[dev-dependencies]
hex-literal = "0.3"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
num-derive = "0.3"
anyhow = "1"

[package.metadata.docs.rs]
all-features = true
