[package]
name = "bonsaidb-core"
version = "0.4.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "Core functionality and types for BonsaiDb."
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations"]
readme = "./README.md"
homepage = "https://bonsaidb.io/"
rust-version = "1.60"

[features]
default = []
test-util = ["tokio", "anyhow", "num_cpus"]
websockets = []
actionable-traits = []
instrument = ["pot/tracing"]
encryption = []
password-hashing = []
included-from-omnibus = ["bonsaidb-macros/omnibus-path"]
included-from-server = ["bonsaidb-macros/server-path"]
included-from-local = ["bonsaidb-macros/local-path"]
included-from-client = ["bonsaidb-macros/client-path"]

[dependencies]
bonsaidb-macros = { path = "../bonsaidb-macros", version = "=0.4.0" }
circulate = { version = "0.3.0" }
serde = { version = "1", features = ["derive"] }
pot = "1.0.0"
async-trait = "0.1"
uuid = { version = "0.8", features = ["v4", "serde"], optional = true }
thiserror = "1"
sha2 = "0.10"
futures = { version = "0.3" }
tokio = { version = "1.16.1", features = ["time"], optional = true }
num-traits = "0.2"
actionable = "0.2.0"
anyhow = { version = "1", optional = true }
itertools = "0.10"
ordered-varint = "1.0.1"
derive-where = "=1.0.0-rc.2"
transmog = "0.1.0"
transmog-pot = "0.1.0"
arc-bytes = { version = "0.3.3", features = ["serde"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
num_cpus = { version = "1.13.1", optional = true }
tinyvec = { version = "1.5.1", features = ["alloc"] }

[dev-dependencies]
hex-literal = "0.3"
tokio = { version = "1.16.1", features = ["full"] }
futures = { version = "0.3" }
num-derive = "0.3"
anyhow = "1"
transmog-bincode = "0.1"
num_cpus = "1"

[package.metadata.docs.rs]
features = ["websockets", "encryption", "password-hashing"]
