[package]
name = "bonsaidb-files"
version = "0.1.0"
edition = "2021"
description = "Efficient large file storage for BonsaiDb"
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["blobs", "bonsaidb", "files"]
categories = ["data-structures", "database"]
readme = "./README.md"
homepage = "https://bonsaidb.io/"
rust-version = "1.58"

[dependencies]
bonsaidb-core = { version = "0.4.0", path = "../bonsaidb-core" }
bonsaidb-utils = { version = "0.4.0", path = "../bonsaidb-utils" }
derive-where = "=1.0.0-rc.2"
serde = { version = "1", features = ["derive"] }
parking_lot = "0.12.0"
lru = "0.7.3"

[dev-dependencies]
bonsaidb-core = { version = "0.4.0", path = "../bonsaidb-core", features = [
    "test-util",
] }
bonsaidb-local = { version = "0.4.0", path = "../bonsaidb-local", default-features = false }
