[package]
name = "bonsaidb-files"
version = "0.1.0"
edition = "2021"
description = "Efficient large file storage for BonsaiDb"
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["blobs", "bonsaidb", "files"]
categories = ["data-structures", "database"]
readme = "./README.md"
homepage = "https://bonsaidb.io/"
rust-version = "1.65"

[features]
async = ["dep:tokio", "dep:futures"]

[[example]]
name = "basic-files-async"
required-features = ["async"]

[dependencies]
bonsaidb-macros = { path = "../bonsaidb-macros", version = "=0.4.0" }
bonsaidb-core = { version = "0.4.0", path = "../bonsaidb-core" }
bonsaidb-utils = { version = "0.4.0", path = "../bonsaidb-utils" }
derive-where = "~1.2.0"
serde = { version = "1", features = ["derive"] }
parking_lot = "0.12.0"
lru = "0.9.0"
thiserror = "1"
tokio = { version = "1.16.1", optional = true, features = ["rt", "io-util"] }
futures = { version = "0.3", optional = true }

[dev-dependencies]
bonsaidb-core = { version = "0.4.0", path = "../bonsaidb-core", features = [
    "test-util",
] }
bonsaidb-local = { version = "0.4.0", path = "../bonsaidb-local", default-features = false, features = [
    "async",
] }
tokio = { version = "1.16.1", features = ["macros", "time"] }
anyhow = "1"
