[package]
name = "bonsaidb-keystorage-s3"
version = "0.4.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "BonsaiDb `VaultKeyStorage` using S3-compatible storage."
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["s3", "bonsaidb", "keystorage"]
categories = ["config"]
readme = "./README.md"
homepage = "https://bonsaidb.io/"
rust-version = "1.70"

[dependencies]
aws-sdk-s3 = { version = "0.30.0" }
aws-config = { version = "0.56.1" }
aws-smithy-client = { version = "0.56.1" }
bonsaidb-local = { version = "0.4.0", path = "../bonsaidb-local", default-features = false, features = [
    "encryption",
] }
async-trait = "0.1"
anyhow = "1"
log = "0.4"
http = "0.2"
tokio = { version = "1.16.1", default-features = false, features = ["rt"] }

[dev-dependencies]
tokio = { version = "1.16.1", features = ["full"] }
dotenvy = "0.15.7"
bonsaidb-core = { version = "0.4.0", path = "../bonsaidb-core", features = [
    "test-util",
] }
bonsaidb-local = { version = "0.4.0", path = "../bonsaidb-local", default-features = false, features = [
    "async",
] }
