[package]
name = "bonsaidb-local"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "Local database storage for BonsaiDb."
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations", "database"]
readme = "../../README.md"
homepage = "https://bonsaidb.io/"

[lib]

[features]
default = ["full"]
full = ["cli", "encryption", "instrument", "multiuser", "password-hashing"]
cli = ["clap"]
internal-apis = []
instrument = ["pot/tracing", "nebari/tracing", "tracing"]
encryption = [
    "bonsaidb-core/encryption",
    "hpke",
    "zeroize",
    "region",
    "blake3",
    "chacha20poly1305",
]
multiuser = ["bonsaidb-core/multiuser"]
password-hashing = [
    "argon2",
    "zeroize",
    "once_cell",
    "multiuser",
    "bonsaidb-core/password-hashing",
]
included-from-omnibus = []

[dependencies]
async-trait = "0.1"
bonsaidb-core = { path = "../bonsaidb-core", version = "0.1.0", features = ["included-from-local"] }
bonsaidb-utils = { path = "../bonsaidb-utils", version = "0.1.0" }
nebari = { version = "0.2" }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
pot = "1.0.0"
bincode = "1.3"
flume = "0.10"
itertools = "0.10"
clap = { version = "3", optional = true, features = ["derive"] }
rand = "0.8"
byteorder = "1"
futures = "0.3"
chacha20poly1305 = { version = "0.9", optional = true }
zeroize = { version = "1", optional = true }
region = { version = "3", optional = true }
blake3 = { version = "1", optional = true }
hpke = { version = "0.8", default-features = false, features = [
    "p256",
    "serde_impls",
], optional = true }
p256 = "0.9.0"
tracing = { version = "0.1", optional = true, default-features = false, features = [
    "attributes",
] }
log = "0.4"
derive-where = "=1.0.0-rc.2"
async-lock = "2"
argon2 = { version = "^0.3.3", optional = true, features = ["parallel"] }
sysinfo = { version = "0.23", default-features = false }
once_cell = { version = "1", optional = true }

[dev-dependencies]
bonsaidb-core = { path = "../bonsaidb-core", version = "0.1.0", features = [
    "test-util",
] }
futures = "0.3"
anyhow = "1"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
