[package]
name = "bonsaidb-local"
version = "0.4.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "Local database storage for BonsaiDb."
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations", "database"]
readme = "./README.md"
homepage = "https://bonsaidb.io/"
rust-version = "1.60"

[lib]

[features]
default = ["full"]
full = [
    "cli",
    "encryption",
    "instrument",
    "token-authentication",
    "password-hashing",
    "compression",
    "async",
]
cli = ["clap", "crossterm"]
internal-apis = []
instrument = ["pot/tracing", "nebari/tracing", "tracing"]
encryption = [
    "bonsaidb-core/encryption",
    "hpke",
    "zeroize",
    "region",
    "chacha20poly1305",
]
compression = ["lz4_flex"]
password-hashing = [
    "argon2",
    "zeroize",
    "once_cell",
    "bonsaidb-core/password-hashing",
]
token-authentication = ["bonsaidb-core/token-authentication"]
included-from-omnibus = []
async = ["tokio", "async-trait", "futures"]

[dependencies]
async-trait = { version = "0.1", optional = true }
bonsaidb-core = { path = "../bonsaidb-core", version = "=0.4.0", features = [
    "included-from-local",
] }
bonsaidb-utils = { path = "../bonsaidb-utils", version = "=0.4.0" }
nebari = { version = "0.5.3" }
fs2 = "0.4.3"
thiserror = "1"
tokio = { version = "1.16.1", features = ["full"], optional = true }
serde = { version = "1", features = ["derive"] }
pot = "1.0.0"
transmog-versions = "0.1.0"
bincode = "1.3"
flume = "0.10"
itertools = "0.10"
clap = { version = "3", optional = true, features = ["derive"] }
rand = "0.8"
byteorder = "1"
futures = { version = "0.3.19", optional = true }
chacha20poly1305 = { version = "0.9", optional = true }
zeroize = { version = "1", optional = true }
region = { version = "3", optional = true }
hpke = { version = "0.8", default-features = false, features = [
    "p256",
    "serde_impls",
], optional = true }
p256 = "0.9.0"
tracing = { version = "0.1", optional = true, default-features = false, features = [
    "attributes",
] }
log = "0.4"
derive-where = "=1.0.0-rc.2"
parking_lot = "0.12.0"
argon2 = { version = "^0.4.0", optional = true, features = ["parallel"] }
sysinfo = { version = "0.23", default-features = false }
once_cell = { version = "1", optional = true }
lz4_flex = { version = "0.9.2", optional = true }
easy-parallel = "3.2.0"
watchable = "0.1.0"
crossterm = { version = "0.23.2", optional = true }
blake3 = "1.3.1"

[dev-dependencies]
bonsaidb-core = { path = "../bonsaidb-core", version = "=0.4.0", features = [
    "test-util",
] }
futures = "0.3"
anyhow = { version = "1", features = ["backtrace"] }
fs_extra = "1.2.0"

[package.metadata.docs.rs]
features = ["full"]
