[package]
name = "bonsaidb-local"
version = "0.4.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "Local database storage for BonsaiDb."
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations", "database"]
readme = "./README.md"
homepage = "https://bonsaidb.io/"
rust-version = "1.70"

[lib]

[features]
default = ["full"]
full = [
    "cli",
    "encryption",
    "instrument",
    "token-authentication",
    "password-hashing",
    "compression",
    "async",
]
cli = ["dep:clap", "dep:crossterm"]
internal-apis = []
instrument = ["pot/tracing", "nebari/tracing", "dep:tracing"]
encryption = [
    "bonsaidb-core/encryption",
    "dep:hpke",
    "dep:zeroize",
    "dep:memsec",
    "dep:chacha20poly1305",
]
compression = ["dep:lz4_flex"]
password-hashing = [
    "dep:argon2",
    "dep:zeroize",
    "dep:once_cell",
    "bonsaidb-core/password-hashing",
]
token-authentication = ["bonsaidb-core/token-authentication"]
included-from-omnibus = []
async = ["dep:tokio", "dep:async-trait", "dep:futures"]

[dependencies]
async-trait = { version = "0.1", optional = true }
bonsaidb-core = { path = "../bonsaidb-core", version = "=0.4.0", features = [
    "included-from-local",
] }
bonsaidb-utils = { path = "../bonsaidb-utils", version = "=0.4.0" }
nebari = { version = "0.5.0" }
fs2 = "0.4.3"
thiserror = "1"
tokio = { version = "1.16.1", features = ["full"], optional = true }
serde = { version = "1", features = ["derive"] }
pot = "3.0.0"
transmog-versions = "0.1.0"
bincode = "1.3"
flume = "0.11.0"
itertools = "0.11"
clap = { version = "4.1.4", optional = true, features = ["derive"] }
rand = "0.8"
byteorder = "1"
futures = { version = "0.3.19", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
zeroize = { version = "1", optional = true }
memsec = { version = "0.6.3", optional = true }
hpke = { version = "0.10", default-features = false, features = [
    "p256",
    "serde_impls",
], optional = true }
p256 = "0.13.2"
tracing = { version = "0.1", optional = true, default-features = false, features = [
    "attributes",
] }
log = "0.4"
derive-where = "~1.2.0"
parking_lot = "0.12.0"
argon2 = { version = "0.5.1", optional = true, features = ["std"] }
sysinfo = { version = "0.29.4", default-features = false }
once_cell = { version = "1", optional = true }
lz4_flex = { version = "0.11.1", optional = true }
easy-parallel = "3.2.0"
watchable = "1.1.1"
crossterm = { version = "0.27.0", optional = true }

[dev-dependencies]
bonsaidb-core = { path = "../bonsaidb-core", version = "=0.4.0", features = [
    "test-util",
] }
futures = "0.3"
anyhow = "1"
fs_extra = "1.2.0"

[package.metadata.docs.rs]
features = ["full"]
