[package]
name = "bonsaidb-macros"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "Macros for use in `BonsaiDb`"
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations"]
readme = "../../README.md"
homepage = "https://bonsaidb.io/"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1"
proc-macro2 = "1.0.36"
quote = "1"
syn = "1"
trybuild = "1.0.54"
proc-macro-crate = "1.1.0"

# TODO change this to version after release of attribute-derive
[dependencies.attribute-derive]
git = "https://github.com/ModProg/attribute-derive"

[dev-dependencies]
compiletest_rs = "0.7"
transmog-bincode = "0.1.0-dev.2"

[dev-dependencies.bonsaidb]
path = "../bonsaidb/"

[dev-dependencies.serde]
version = "1.0.133"
features = ["derive"]

[features]
omnibus-path = []
server-path = []
local-path = []
client-path = []
