[package]
name = "bonsaidb-macros"
version = "0.4.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "Macros for use in BonsaiDb"
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations"]
readme = "../../README.md"
homepage = "https://bonsaidb.io/"
rust-version = "1.70"

[lib]
proc-macro = true

[dependencies]
attribute-derive = "0.6.0"
proc-macro-crate = "1.1.0"
proc-macro2 = { version = "1.0.37", features = ["nightly"] }
quote = "1"
quote-use = { version = "0.7.0", features = ["namespace_idents"] }
syn = "2"
trybuild = "1.0.54"
manyhow = "0.6.0"

[dev-dependencies]
compiletest_rs = "0.10.2"
transmog-bincode = "0.1.0"

[dev-dependencies.bonsaidb]
path = "../bonsaidb/"
features = ["files"]

[dev-dependencies.serde]
version = "1.0.133"
features = ["derive"]

[features]
omnibus-path = []
server-path = []
local-path = []
client-path = []
