[package]
name = "bonsaidb-server"
version = "0.1.0-dev.4"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "Database server for BonsaiDb."
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations"]
readme = "../../README.md"
homepage = "https://dev.bonsaidb.io/"

[features]
default = ["full"]
full = ["cli", "websockets", "acme"]
cli = ["structopt", "pem"]
test-util = ["bonsaidb-core/test-util"]
websockets = ["bonsaidb-core/websockets", "tokio-tungstenite", "bincode"]
tracing = ["pot/tracing"]
acme = ["async-acme", "pem", "rcgen"]

[dependencies]
bonsaidb-core = { path = "../bonsaidb-core", version = "0.1.0-dev.4", default-features = false, features = [
    "networking",
    "actionable-traits",
] }
bonsaidb-local = { path = "../bonsaidb-local", version = "0.1.0-dev.4", default-features = false, features = [
    "internal-apis",
] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
async-trait = "0.1"
structopt = { version = "0.3", optional = true }
futures = "0.3"
flume = "0.10"
itertools = "0.10"
tokio-tungstenite = { version = "0.15", optional = true }
bincode = { version = "1", optional = true }
actionable = "0.1.0-rc.2"
pot = "0.1.0-alpha.2"
fabruic = { version = "0.0.1-dev.2", features = ["dangerous"] }
cfg-if = "1"
pem = { version = "1", optional = true }
async-acme = { git = "https://github.com/khonsulabs/async-acme", branch = "main", optional = true, features = [
    "hyper_rustls",
] }
rcgen = { version = "0.8", optional = true }
rustls = "0.20"
tokio-rustls = { version = "0.23" }
tower-http = { version = "0.1", optional = true }
parking_lot = "0.11"

[dev-dependencies]
bonsaidb-core = { path = "../bonsaidb-core", version = "0.1.0-dev.4", default-features = false, features = [
    "test-util",
] }
anyhow = "1"

[package.metadata.docs.rs]
all-features = true
