[package]
name = "bonsaidb-server"
version = "0.1.0-dev.4"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "Database server for BonsaiDb."
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations"]
readme = "../../README.md"
homepage = "https://dev.bonsaidb.io/"

[features]
default = ["full"]
full = ["cli", "websockets", "acme", "encryption"]
cli = ["structopt", "pem", "env_logger"]
test-util = ["bonsaidb-core/test-util"]
websockets = [
    "bonsaidb-core/websockets",
    "tokio-tungstenite",
    "bincode",
    "base64",
    "sha-1",
]
instrument = ["tracing", "pot/tracing"]
acme = ["async-acme", "pem"]
encryption = ["bonsaidb-local/encryption", "bonsaidb-core/encryption"]
included-from-omnibus = []

[dependencies]
bonsaidb-core = { path = "../bonsaidb-core", version = "0.1.0-dev.4", default-features = false, features = [
    "networking",
    "actionable-traits",
    "multiuser",
] }
bonsaidb-local = { path = "../bonsaidb-local", version = "0.1.0-dev.4", default-features = false, features = [
    "internal-apis",
    "multiuser",
] }
bonsaidb-utils = { path = "../bonsaidb-utils", version = "0.1.0-dev.4" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
async-trait = "0.1"
structopt = { version = "0.3", optional = true }
futures = "0.3"
flume = "0.10"
itertools = "0.10"
tokio-tungstenite = { version = "0.16", optional = true }
bincode = { version = "1", optional = true }
pot = "0.1.0-alpha.3"
fabruic = { version = "0.0.1-dev.5", features = ["dangerous"] }
cfg-if = "1"
pem = { version = "1", optional = true }
async-acme = { version = "0.3", optional = true, features = ["hyper_rustls"] }
rustls = "0.20"
tokio-rustls = { version = "0.23" }
parking_lot = "0.11"
hyper = { version = "0.14", optional = true }
sha-1 = { version = "0.9", optional = true }
base64 = { version = "0.13", optional = true }
tracing = { version = "0.1", optional = true, default-features = false, features = [
    "attributes",
] }
log = "0.4"
signal-hook = "0.3"
env_logger = { version = "0.9", optional = true }
derive-where = "1.0.0-rc.1"
async-lock = "2"


[dev-dependencies]
bonsaidb-core = { path = "../bonsaidb-core", version = "0.1.0-dev.4", default-features = false, features = [
    "test-util",
] }
anyhow = "1"

[package.metadata.docs.rs]
all-features = true
