[package]
name = "bonsaidb-server"
version = "0.4.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "Database server for BonsaiDb."
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations"]
readme = "./README.md"
homepage = "https://bonsaidb.io/"
rust-version = "1.65"

[features]
default = ["full"]
full = [
    "cli",
    "websockets",
    "acme",
    "encryption",
    "token-authentication",
    "password-hashing",
    "compression",
]
cli = ["clap", "pem", "env_logger", "bonsaidb-local/cli"]
test-util = ["bonsaidb-core/test-util"]
websockets = [
    "bonsaidb-core/websockets",
    "tokio-tungstenite",
    "bincode",
    "base64",
    "sha-1",
]
instrument = ["tracing", "pot/tracing"]
acme = ["async-acme", "pem"]
encryption = ["bonsaidb-local/encryption", "bonsaidb-core/encryption"]
password-hashing = [
    "bonsaidb-local/password-hashing",
    "bonsaidb-core/password-hashing",
]
token-authentication = [
    "bonsaidb-core/token-authentication",
    "bonsaidb-local/token-authentication",
]
compression = ["bonsaidb-local/compression"]

included-from-omnibus = []

[dependencies]
bonsaidb-core = { path = "../bonsaidb-core", version = "=0.4.0", default-features = false, features = [
    "actionable-traits",
    "included-from-server",
] }
bonsaidb-local = { path = "../bonsaidb-local", version = "=0.4.0", default-features = false, features = [
    "internal-apis",
    "async",
] }
bonsaidb-utils = { path = "../bonsaidb-utils", version = "=0.4.0" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"] }
thiserror = "1"
async-trait = "0.1"
clap = { version = "4.1.4", optional = true, features = ["derive"] }
futures = "0.3"
flume = "0.10"
itertools = "0.10"
tokio-tungstenite = { version = "0.18.0", optional = true }
bincode = { version = "1", optional = true }
pot = "2.0.0"
fabruic = { version = "0.0.1-dev.6", features = ["dangerous"] }
cfg-if = "1"
pem = { version = "1", optional = true }
async-acme = { version = "0.3", optional = true, features = ["hyper_rustls"] }
rustls = "0.20"
tokio-rustls = { version = "0.23" }
parking_lot = "0.12.0"
hyper = { version = "0.14", optional = true }
sha-1 = { version = "0.10", optional = true }
base64 = { version = "0.21.0", optional = true }
tracing = { version = "0.1", optional = true, default-features = false, features = [
    "attributes",
] }
log = "0.4"
signal-hook = "0.3"
env_logger = { version = "0.10.0", optional = true }
derive-where = "~1.2.0"
async-lock = "2"


[dev-dependencies]
bonsaidb-core = { path = "../bonsaidb-core", version = "=0.4.0", default-features = false, features = [
    "test-util",
] }
anyhow = "1"

[package.metadata.docs.rs]
features = ["full"]
