[package]
name = "bonsaidb-utils"
version = "0.1.0-dev.4"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "Utilities used within `BonsaiDb`."
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations"]
readme = "../../README.md"
homepage = "https://dev.bonsaidb.io/"

[dependencies]
