[package]
name = "bonsaidb-utils"
version = "0.4.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "Utilities used within BonsaiDb."
repository = "https://github.com/khonsulabs/bonsaidb"
license = "MIT OR Apache-2.0"
keywords = ["document-database", "database"]
categories = ["database-implementations"]
readme = "./README.md"
homepage = "https://bonsaidb.io/"
rust-version = "1.65"

[dependencies]
